<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/widget_list_item"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/widget_symbol"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        tools:text="GOOG"
        android:contentDescription="@string/description_stock_symbol"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        >

        <TextView
            android:id="@+id/widget_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            tools:text="1000.00"
            android:contentDescription="@string/description_stock_price"/>

        <TextView
            android:id="@+id/widget_change"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            tools:text="100%"
            android:contentDescription="@string/description_stock_change"/>
    </LinearLayout>
</LinearLayout>